--- a/views/knife.pug
+++ b/views/knife.pug
@@ -1,19 +1,33 @@
-extends layout
+//- extends layout
 
+//- block content
+//-   h1= title
+//-   div.container-fluid
+//-    div.row
+//-      - 
+//-         let Knife = results
+//-      each knife,index in Knife        
+//-        div.col-sm-2(onclick=`buy(${index})`)
+//-         p(style="color:yellow;") knife_name: #{knife.knife_name}
+//-         p(style="color:green;") Size: #{knife.size}
+//-         p(style="color:purple;") Price: $#{knife.price.toFixed(2)}
+     
+//-   a(href="/") Back to index
+//-   script.
+//-    function buy(index) {
+//-       alert(`You purchased item ${index}`);
+//-     }
+extends layout
+ 
 block content
   h1= title
-  div.container-fluid
-   div.row
-     - 
-        let Knife = results
-     each knife,index in Knife        
-       div.col-sm-2(onclick=`buy(${index})`)
-        p(style="color:yellow;") knife_name: #{knife.knife_name}
-        p(style="color:green;") Size: #{knife.size}
-        p(style="color:purple;") Price: $#{knife.price.toFixed(2)}
-     
-  a(href="/") Back to index
+  - let items = results;
+  div(class="container-fluid")
+  div(class="row m-1")
+    each item in items
+      - let destination = `dispatch(\"/knife/update?id=${item._id}\")`
+      div(class="row-sm-2", class="m-1") Item: #{item.knife_name}(#{item.size}) is #{item.price}
+      button.btn( class="btn-primary ml-1", onclick= destination) Update
   script.
-   function buy(index) {
-      alert(`You purchased item ${index}`);
-    }
+    function dispatch(path){
+      window.location.href=path}
