--- a/views/index.pug
+++ b/views/index.pug
@@ -1,17 +1,14 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title} IPL 2024
-  button(type="button", class="btn btn-secondary"  onclick="double()") I'm Button 
-  br
-  div#double Up the amount
-  script.
-    let value = 0;
-    let power = 1;
-    function double() {
-      value += 1;
-      power *= 2;
-      document.getElementById('double').innerText = `Two to the power ${value} is ${power}.`;
-    }
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/knife") Take me to knife
+    br
+    a(href="/logout") Logout
+
 
